BUG#36586 Online backup stream library can miss end of a stream. Make sure end-of-stream is detected.  Before this fix, a restore of a multi-block backup image would never complete.